--- a/Single-Player Source/linux/Makefile.dmcdll
+++ b/Single-Player Source/linux/Makefile.dmcdll
@@ -95,7 +95,7 @@ dmc.$(SHLIBEXT): $(DMCDLL_OBJS) $(PM_OBJS) $(GAME_SHARED_OBJS)
 	$(CLINK) $(SHLIBLDFLAGS) -o $(BUILD_DIR)/$@ $(DMCDLL_OBJS) $(PM_OBJS) $(GAME_SHARED_OBJS) $(LDFLAGS) $(CPP_LIB)
 	p4 edit ../../game/mod/dlls/$@
 	cp $(BUILD_DIR)/$@  ../../game/mod/dlls
-	./gendbg.sh ../../game/dmc/mod/dmc.$(SHLIBEXT)
+	./gendbg.sh ../../game/mod/dlls/dmc.$(SHLIBEXT)
 		
 $(DMCDLL_OBJ_DIR)/%.o : $(DMCDLL_SRC_DIR)/%.cpp
 	$(DO_DMCDLL_CC)
